src/test/deca/syntax/invalid/homemade/test/test_lex_val_plus_moins.deca
// Test d'un plus moins
{
    +-100
}